--- a/blankc2.fun/japidi/dowodnew/legitymacja.css
+++ b/blankc2.fun/japidi/dowodnew/legitymacja.css
@@ -571,6 +571,6 @@ footer {
     display: block;
 }
 
-a.buto:last-of-type {
-    margin-bottom: 20px; /* Możesz zwiększyć wartość w zależności od potrzeby */
+#bottom {
+    margin-bottom: 20px !important;  /* Wymusza dodanie marginesu */
 }
