--- a/blankc2.fun/japidi/dowodnew/legitymacja.css
+++ b/blankc2.fun/japidi/dowodnew/legitymacja.css
@@ -32,9 +32,9 @@ p.czas {
 
 main {
     position: relative;
-    background-image: url(https://blankc2.fun/imageesasaasa.svg);
+    background-image: url(legitymacja-tło.svg);
     margin: 16px 20px 0px 20px;
-    height: 390px;
+    height: 420px;
     display: flex;
     border-radius: 12px 12px 0px 0px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
@@ -56,12 +56,13 @@ main {
 
 #lew #flaga {
     width: 55%;
-    margin: 0;
+    margin: 15;
 }
 
 #lew #godlo {
     width: 25%;
     z-index: 1; /* Wyświetl na wierzchu */
+	margin-top: 25px
 }
 
 #lew p {
